// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays general validation errors 1`] = `
Array [
  Array [
    "[31m[1m✕[22m[39m [31m[1mDeployment failed [90m(xxxx-xxxx-xxxx)[31m[22m[39m",
  ],
  Array [
    "",
  ],
  Array [
    "  1) [36mname[39m is required",
  ],
  Array [
    "",
  ],
]
`;

exports[`displays instructions for a missing mailchimp api key 1`] = `
Array [
  Array [
    "[31m[1m✕[22m[39m [31m[1mDeployment failed [90m(xxxx-xxxx-xxxx)[31m[22m[39m",
  ],
  Array [
    "",
  ],
  Array [
    "  1) The secret [36m[1m@my-mailchimp-key[22m[39m is not defined yet [90m(actions[0].apiKey)[39m",
  ],
  Array [
    "",
  ],
  Array [
    "       Here's where to find your API key:
       
         • Log in to your Mailchimp account
         • Open the menu with your avatar in the upper right
         • Navigate to [1m[36mProfile › Extras › API keys[39m[22m
         • Under \\"Your API keys\\", click [1m[36mCreate A Key[39m[22m
       
       Copy the generated key and run the following command:
       
         [90m$[39m statickit secrets add [36mmy-mailchimp-key[39m [33m<paste-api-key-here>[39m",
  ],
  Array [
    "",
  ],
  Array [
    "",
  ],
  Array [
    "",
  ],
]
`;

exports[`displays instructions for a missing mailchimp audience 1`] = `
Array [
  Array [
    "[31m[1m✕[22m[39m [31m[1mDeployment failed [90m(xxxx-xxxx-xxxx)[31m[22m[39m",
  ],
  Array [
    "",
  ],
  Array [
    "  1) The secret [36m[1m@my-mailchimp-audience[22m[39m is not defined yet [90m(actions[0].audience)[39m",
  ],
  Array [
    "",
  ],
  Array [
    "       Here's how to found your Audience ID:
       
         • Log in to your Mailchimp account
         • Click the [1m[36mAudience[39m[22m tab at the top
         • Navigate to [1m[36mManage Audience › Settings[39m[22m
         • Click [1m[36mAudience name and defaults[39m[22m
         • Locate the value under the \\"Audience ID\\" heading
       
       Copy the ID and run the following command:
       
         [90m$[39m statickit secrets add [36mmy-mailchimp-audience[39m [33m<paste-audience-id-here>[39m",
  ],
  Array [
    "",
  ],
  Array [
    "",
  ],
  Array [
    "",
  ],
]
`;

exports[`displays instructions when a secret reference is required 1`] = `
Array [
  Array [
    "[31m[1m✕[22m[39m [31m[1mDeployment failed [90m(xxxx-xxxx-xxxx)[31m[22m[39m",
  ],
  Array [
    "",
  ],
  Array [
    "  1) [36m[1mactions[0].apiKey[22m[39m must reference a secret (e.g. [36m[1m@mailchimp-api-key[22m[39m)",
  ],
  Array [
    "",
  ],
  Array [
    "       This field must reference a secret instead of a raw value, 
       because it's too sensitive to commit to version control.
       
       [33m[1m-- Instructions ----------------------------------------------------------[22m[39m
       
       First, choose a name for this value and run the following command:
       
           [90m$[39m statickit secrets add [36mmailchimp-api-key[39m [32m\\"myinlinekey\\"[39m
       
       Then, reference your secret like this (notice the @-symbol prefix):
       
           {
             [32m\\"apiKey\\"[39m: [32m\\"@mailchimp-api-key\\"[39m
           }",
  ],
  Array [
    "",
  ],
  Array [
    "",
  ],
  Array [
    "",
  ],
]
`;

exports[`does not install the shim if --no-shim is used 1`] = `
Array [
  Array [
    "[32m✔[39m [32mDeployment succeeded [90m(xxxx-xxxx-xxxx)[32m[39m",
  ],
]
`;

exports[`does not install the shim if not present in the response 1`] = `
Array [
  Array [
    "[32m✔[39m [32mDeployment succeeded [90m(xxxx-xxxx-xxxx)[32m[39m",
  ],
]
`;

exports[`installs the shim if present in the response 1`] = `
Array [
  Array [
    "[32m✔[39m [32mDeployment succeeded [90m(xxxx-xxxx-xxxx)[32m[39m",
  ],
  Array [
    "[32m✔[39m [32mFunctions installed [90m(shim-ref)[32m[39m",
  ],
]
`;

exports[`outputs shim install errors 1`] = `
Array [
  Array [
    "[31m[1m✕[22m[39m [31m[1mFunctions failed to install[22m[39m",
  ],
  Array [
    [Error: error installing package],
  ],
]
`;

exports[`sends a deploy request with the right params 1`] = `
Array [
  Array [
    "[32m✔[39m [32mDeployment succeeded [90m(xxxx-xxxx-xxxx)[32m[39m",
  ],
]
`;
